Maximum width of 1000px for the main content ; avoids too large content on large screens

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -36,6 +36,7 @@ body{
 
 	#main_wrapper{
 		width: 70%;
+		max-width: 1000px;
 	}
 
 }
